# codesight

./: .gitignore  CITATION.cff  LICENSE  README.md  package.json
.codesight/: CODESIGHT.md  cicd.md  config.md  coverage.md  events.md  graph.md  libs.md  middleware.md
.codesight/wiki/: api.md  index.md  libraries.md  log.md  overview.md  path.md
.github/workflows/: ast-plugins.yml
docs/: wasm-plugins.md
plugins/ast/: Cargo.toml
plugins/ast/golang/: go.mod  main.go
plugins/ast/python/: Cargo.toml
plugins/ast/python/src/: lib.rs
plugins/ast/rust/: Cargo.toml
plugins/ast/rust/src/: lib.rs
reference/ast-plugin/: checksums.json  codesight-reference-ast.wasm
reference/ast-plugin/assembly/: index.ts
src/: core.ts  index.ts  scanner.ts  types.ts
src/ast/: native-loader.ts
src/detectors/: native.ts  routes.ts  schema.ts
src/plugins/: index.ts
src/wasm/: plugin-host.ts
tests/: builtin-plugins.test.ts  detectors.test.ts  native-ast.test.ts  reference-plugin.test.ts
tests/fixtures/celery-detect/: tasks.py
tests/fixtures/celery-events/: tasks.py
tests/fixtures/celery-pyproject-detect/: pyproject.toml
tests/fixtures/config-app/: .env.example
tests/fixtures/django-app/: urls.py
tests/fixtures/drizzle-schema/: package.json
tests/fixtures/elysia-app/: package.json
tests/fixtures/express-app/: package.json
tests/fixtures/fastapi-app/: main.py
tests/fixtures/fastify-app/: package.json
tests/fixtures/hono-app/: package.json
tests/fixtures/monorepo-detect/: package.json
tests/fixtures/monorepo-init/: .windsurfrules
tests/fixtures/monorepo-init-append/: .windsurfrules
tests/fixtures/monorepo-init-skip/: .windsurfrules
tests/fixtures/nestjs-app/: package.json
tests/fixtures/next-app/: package.json
tests/fixtures/nuxt-app/: package.json
tests/fixtures/prisma-schema/: package.json
tests/fixtures/python-celery-workspace/: package.json
tests/fixtures/react-app/: package.json
tests/fixtures/remix-detect/: package.json
tests/fixtures/roku-apmc-style/: bsconfig.json  package.json
tests/fixtures/roku-brighterscript-template/: bsconfig.json  package.json
tests/fixtures/roku-bsconfig-no-manifest/: bsconfig.json  package.json
tests/fixtures/roku-deploy-single-channel/: package.json
tests/fixtures/roku-standard-channel/: manifest
(+56 files in other folders)
